--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -20,8 +20,8 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
   | date         | purpose       |   value |
   |--------------+---------------+---------|
-  | [2022-02-10] | taxi          |     -22 |
-  | [2022-02-10] | buy fruit     |     -15 |
+  | [2022-02-10] | commute       |     -22 |
+  | [2022-02-10] | shopping      |     -15 |
   | [2022-02-12] | house rent    |   -2000 |
   | [2022-02-12] | wf month card |     -50 |
   | [2022-02-12] | takeout       |   -42.4 |
@@ -29,37 +29,30 @@ DEADLINE: <2022-03-10 周四 23:00 +1m> SCHEDULED: <2022-03-10 周四 09:00 +1m>
   | [2022-02-13] | takeout       |     -53 |
   |              |               | -2207.3 |
 #+TBLFM: @9$3=vsum(@2$3..@-1$3)
-- State "DONE"       from "TODO"       [2022-01-12 周四 20:44] \\
-  1. 房租2000, 电费80(空调+电脑), 物业+水117, 网费100
-- State "DONE"       from "TODO"       [2021-12-12 周日 10:26] \\
-  1. 房租2000, 电费80(空调+电脑), 物业+水117, 网费100
-- State "DONE"       from "TODO"       [2021-11-12 周五 16:57] \\
-  1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
-- State "DONE"       from "TODO"       [2021-09-12 周日 09:06] \\
-  1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
-- State "DONE"       from "TODO"       [2021-08-12 周四 16:02] \\
-  1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费113
-- State "DONE"       from "TODO"       [2021-07-12 周一 09:21] \\
-  1. 房租2000, 电费160(空调+电脑), 物业+水117, 网费113
 - State "DONE"       from "TODO"       [2021-06-13 周日 17:42] \\
   1. 房租2000, 电费130(开了空调), 物业+水117, 办理了电信300m宽带(预付200)
-- State "DONE"       from "TODO"       [2021-05-12 周三 09:21] \\
-  1. 房租2000, 本月电费200(实际每月40左右), 物业+水103
 - State "DONE"       from "TODO"       [2021-04-10 周六 13:45] \\
   1. 每个月通过大壮名城物业缴纳电费, 水+物业费. 今天水+物业费有103元的残余, 和房东约定这个月我来缴, 明年的4月份房东来缴纳.
   2. 房间里的马桶坏了, 电磁炉可能坏了, 阳台灯坏了
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
-** TODO [#A] 归档并回顾一周的计划                                    :event:
-DEADLINE: <2022-02-07 周一 23:00 ++1w> SCHEDULED: <2022-02-05 周六 18:00 ++1w>
+** TODO [#A] 归档并回顾一周的计划                                   :event:
+DEADLINE: <2022-02-21 周一 23:00 ++1w> SCHEDULED: <2022-02-18 周五 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2022-01-27 周四 16:38]
+:LAST_REPEAT: [2022-02-14 周一 09:32]
 :END:
+- State "DONE"       from "TODO"       [2022-02-14 周一 09:32] \\
+  1. 前三天在家隔离, 用两天的时间学习了spine动画的基础概念
+  2. 设计战斗日志浏览器:
+     - 功能设计
+     - 界面设计和实现
+  ------------------------------------------------
+  1. grounded优点好玩捏, 可惜是周末两天限免
 - State "DONE"       from "TODO"       [2022-01-27 周四 16:38] \\
   1. 支持任意战斗阵容导出, 测试战斗保存阵容使用同一逻辑
   2. 处理执行回调未展开导致播放顺序错误的问题
@@ -722,19 +715,20 @@ DEADLINE: <2022-03-02 周三 23:00 ++1m> SCHEDULED: <2022-03-02 周三 09:00 ++1
   2. 完成了多益的入职培训
   3. 找到了一处还不错的房子
   4. 认识了很多很棒的同事
-** TODO [#A] 学习晨星网投资教程并记录                               :event:
+** TODO [#A] 每周学习晨星网投资教程一篇 [0/1]                       :event:
 SCHEDULED: <2021-12-08 周三 16:12 +1d>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
 :LAST_REPEAT: [2021-12-08 周三 13:23]
 :END:
+- [ ] 第一篇
 - State "DONE"       from "TODO"       [2021-12-08 周三 13:23] \\
   [[file:../ref/morningstar/featured/保持投资.org][保持投资]]
 ** WAIT [#A] 整理财务情况, 设计投资计划                             :event:
 :PROPERTIES:
 :STYLE:    habit
-:BLOCKER:  olp("live.org" "Next Action/学习晨星网投资教程并记录")
+:BLOCKER:  olp("live.org" "Next Action/每周学习晨星网投资教程一篇")
 :LOGGING: logrepeat DONE(@)
 :END:
 ** WAIT [#A] 自学unity                                              :event:
@@ -743,22 +737,6 @@ SCHEDULED: <2021-12-08 周三 16:12 +1d>
 :LOGGING: logrepeat DONE(@)
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
-:END:
-- State "DONE"       from "TODO"       [2022-01-22 周六 15:07]
-- State "DONE"       from "TODO"       [2022-01-11 周二 13:34]
-- State "DONE"       from "TODO"       [2022-01-05 周三 09:30]
-- State "DONE"       from "TODO"       [2021-12-27 周一 20:45]
-- State "DONE"       from "TODO"       [2021-12-20 周一 08:59]
-- State "DONE"       from "TODO"       [2021-12-13 周一 09:08]
-:LOGBOOK:
-CLOCK: [2021-12-12 周日 17:38]--[2021-12-12 周日 18:03] =>  0:25
-CLOCK: [2021-12-12 周日 17:08]--[2021-12-12 周日 17:33] =>  0:25
-CLOCK: [2021-12-12 周日 16:32]--[2021-12-12 周日 16:58] =>  0:26
-CLOCK: [2021-12-12 周日 16:02]--[2021-12-12 周日 16:27] =>  0:25
-CLOCK: [2021-12-12 周日 15:32]--[2021-12-12 周日 15:57] =>  0:25
-CLOCK: [2021-12-12 周日 15:02]--[2021-12-12 周日 15:27] =>  0:25
-CLOCK: [2021-12-12 周日 11:06]--[2021-12-12 周日 11:31] =>  0:25
-CLOCK: [2021-12-12 周日 10:28]--[2021-12-12 周日 10:53] =>  0:25
 :END:
 * Appointment
 * Project
