--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -13,46 +13,22 @@
 * Inbox
 * Next Action
 ** TODO [#A] 月度财务收支                                           :event:
-DEADLINE: <2022-03-12 周六 23:00 +1m> SCHEDULED: <2022-03-12 周六 09:00 +1m>
+DEADLINE: <2022-04-12 周二 23:00 +1m> SCHEDULED: <2022-04-12 周二 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
+- State "DONE"       from "TODO"       [2022-03-13 周日 08:57] \\
+| date         | purpose    | value |
+|--------------+------------+-------|
+| [2022-03-12] | house rent | -2000 |
+| [2022-03-12] | takeout    |   -65 |
+| [2022-03-13] | takeout    |   -60 |
+| [2022-03-13] | shopping   |    28 |
+|              |            | -2097 |
+#+TBLFM: @6$3=vsum(@2$3..@-1$3)
 - State "DONE"       from "TODO"       [2022-02-10 周四 09:05] \\
-| date         | purpose           |    value |
-|--------------+-------------------+----------|
-| [2022-02-12] | house rent        |    -2000 |
-| [2022-02-12] | wf month card     |      -50 |
-| [2022-02-12] | takeout           |    -42.4 |
-| [2022-02-13] | takeout           |    -24.9 |
-| [2022-02-13] | takeout           |      -53 |
-| [2022-02-16] | shopping          |    -10.4 |
-| [2022-02-17] | shopping          |     -2.5 |
-| [2022-02-18] | shopping          |     -3.4 |
-| [2022-02-18] | commute           |      -18 |
-| [2022-02-18] | shopping          |    -12.5 |
-| [2022-02-19] | commute           |   -19.16 |
-| [2022-02-20] | vampire survior   |      -15 |
-| [2022-02-20] | energy bill       |      -50 |
-| [2022-02-20] | takeout           |      -36 |
-| [2022-02-20] | takeout           |      -45 |
-| [2022-02-23] | shopping          |     -2.5 |
-| [2022-02-25] | shopping          |     -2.5 |
-| [2022-02-26] | shopping          |    -1238 |
-| [2022-02-27] | takeout           |      -81 |
-| [2022-02-28] | property fee      |     -118 |
-| [2022-02-28] | energy bill       |      -50 |
-| [2022-02-28] | elden ring        |     -298 |
-| [2022-03-01] | shopping          |      -18 |
-| [2022-03-02] | risk of rain2 dlc |    -32.5 |
-| [2022-03-02] | shopping          |      -15 |
-| [2022-03-07] | takeout           |      -45 |
-| [2022-03-07] | shopping          |      -45 |
-| [2022-03-08] | shopping          |      -15 |
-| [2022-03-09] | shopping          |     -2.5 |
-| [2022-03-10] | shopping          |      -17 |
-| [2022-03-11] | vault of the void |      -50 |
-|              |                   | -4412.26 |
-#+TBLFM: @33$3=vsum(@2$3..@-1$3)
+#+TBLFM: @34$3=vsum(@3$3..@-1$3)
+house rent: 2000, game: 445,  takeout: 284, fee: 218, shopping: 1373, commute: 37
 - State "DONE"       from "TODO"       [2021-10-12 周二 09:44] \\
   1. 房租2000, 电费200(空调+电脑), 物业+水117, 网费100
   2. 额外疏通水池下水管道50
@@ -828,16 +804,18 @@ CLOCK: [2022-03-07 周一 14:27]--[2022-03-07 周一 14:52] =>  0:25
 :BLOCKER:  olp("live.org" "Next Action/整理财务情况, 设计投资计划")
 :LAST_REPEAT: [2022-01-22 周六 15:07]
 :END:
-** TODO [#A] 减肥 [2/3]                                             :event:
-SCHEDULED: <2022-03-07 周一 17:27 +1w>
+** TODO [#A] 减肥 [0/3]                                             :event:
+SCHEDULED: <2022-03-14 周一 17:27 +1w>
 :PROPERTIES:
-:LAST_REPEAT: [2022-03-07 周一 00:06]
+:LAST_REPEAT: [2022-03-14 周一 01:23]
 :END:
+- State "DONE"       from "TODO"       [2022-03-13 周日 23:23] \\
+  4.0->4.0->4.0, 75.4kg
 - State "DONE"       from "TODO"       [2022-03-06 周日 22:06] \\
   2.5->3.5->4.0, 76.1kg
 目前77kg, 计划减到65kg, 计划每周减0.5kg, 需要24个月
-- [X] 跑步一次 4.0km
-- [X] 跑步一次 4.0km
+- [ ] 跑步一次 4.0km
+- [ ] 跑步一次 4.0km
 - [ ] 跑步一次 4.0km
 * Appointment
 * Project
